# Langchain-and-Ollama

./: ai_courses.html  main.py  ml_installed_packages.txt  pyproject.toml  requirements.txt  test.md
00 Project Setup/: setup.md
02. Langchain Getting Started/: Langchain Getting Started.ipynb
03. Prompt Templates/: Prompt Templates.ipynb
04. Chains/: Chains.ipynb
05. Output Parsing/: Output Parsing.ipynb
06. Chat Message Memory/: Chat Message Memory.ipynb
07. Build Your Own Chatbot/: chat_stream.py
08. Document Loaders/: 1-PDF Document Loaders.ipynb  2-Webpage Loaders.ipynb  3-Microsoft Office Files PPT Excel and Word Reader.ipynb  4-MarkitDown-Microsoft.ipynb  4-MarkitDown.ipynb  5-Docling-IBM.ipynb
08. Document Loaders/docling/: docling.md  scansmpl.md
08. Document Loaders/markitdown/: ml_course.md
09. Vector Stores and Retrievals/: Vector Stores and Retrievals.ipynb
09. Vector Stores and Retrievals/health_supplements/: index.faiss  index.pkl
10. RAG - Chat with Your Own Documents/: RAG - Chat with Your Own Documents.ipynb
11. Tool Calling/: Tool Calling.ipynb
12. Agents/: Agents.ipynb  tools.py
13. Agentic RAG/: Agentic RAG.ipynb
14. LinkedIn Profile Scraping with LLM/: LinkedIn Profile Scraping with LLM.ipynb
14. Text to MySQL Agent/: SQL Agent with Langgraph.ipynb  Text to MySQL Agent.ipynb  Text to MySQL Queries.ipynb
15. LinkedIn Profile Scraping with LLM/: LinkedIn Profile Scraping with LLM.ipynb  linkedin_profile_data.json
16. Resume Parsing/: Resume Parsing with LLM.ipynb
16. Resume Parsing/parsed_resume/: resume-1.json
16. Resume Parsing/scripts/: llm.py
